--- a/package.json
+++ b/package.json
@@ -1,57 +1,67 @@
 {
-  "name": "vscode-eta-language",
-  "displayName": "Eta Template Language for VS Code & Cursor",
-  "description": "Syntax highlighting and language support for .eta (Eta template) files",
-  "version": "0.1.0",
-  "author": "letea",
-  "publisher": "letea",
-  "icon": "images/icon.png",
-  "engines": {
-    "vscode": "^1.60.0"
-  },
-  "main": "./extension.js",
-  "activationEvents": [
-    "onLanguage:eta"
-  ],
-  "categories": [
-    "Programming Languages"
-  ],
-  "dependencies": {
-    "js-beautify": "^1.15.0"
-  },
-  "contributes": {
-    "languages": [
-      {
-        "id": "eta",
-        "extensions": [
-          ".eta"
-        ],
-        "aliases": [
-          "Eta",
-          "HTML Template"
-        ],
-        "configuration": "./language-configuration.json",
-        "icon": {
-          "light": "./images/eta-file-light.png",
-          "dark": "./images/eta-file-dark.png"
-        }
-      }
+    "name": "vscode-eta-language",
+    "displayName": "Eta Template Language for VS Code & Cursor",
+    "description": "Syntax highlighting and language support for .eta (Eta template) files",
+    "version": "0.1.0",
+    "author": "letea",
+    "publisher": "letea",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/letea/vscode-eta-language.git"
+    },
+    "icon": "images/icon.png",
+    "engines": {
+        "vscode": "^1.60.0"
+    },
+    "main": "./extension.js",
+    "activationEvents": [
+        "onLanguage:eta"
     ],
-    "grammars": [
-      {
-        "language": "eta",
-        "scopeName": "text.html.eta",
-        "path": "./syntaxes/eta.tmLanguage.json",
-        "embeddedLanguages": {
-          "meta.embedded.block.javascript.eta": "javascript"
-        }
-      }
+    "categories": [
+        "Programming Languages"
     ],
-    "snippets": [
-      {
-        "language": "eta",
-        "path": "./snippets/eta.code-snippets"
-      }
-    ]
-  }
+    "dependencies": {
+        "js-beautify": "^1.15.0"
+    },
+    "scripts": {
+        "package": "vsce package",
+        "publish": "vsce publish",
+        "publish:openvsx": "npx ovsx publish -p $OVSX_PAT"
+    },
+    "contributes": {
+        "languages": [
+            {
+                "id": "eta",
+                "extensions": [
+                    ".eta"
+                ],
+                "aliases": [
+                    "Eta",
+                    "HTML Template"
+                ],
+                "configuration": "./language-configuration.json",
+                "icon": {
+                    "light": "./images/eta-file-light.png",
+                    "dark": "./images/eta-file-dark.png"
+                }
+            }
+        ],
+        "grammars": [
+            {
+                "language": "eta",
+                "scopeName": "text.html.eta",
+                "path": "./syntaxes/eta.tmLanguage.json",
+                "embeddedLanguages": {
+                    "meta.embedded.block.javascript.eta": "javascript"
+                }
+            }
+        ],
+        "snippets": [
+            {
+                "language": "eta",
+                "path": "./snippets/eta.code-snippets"
+            }
+        ]
+    },
+    "license": "MIT"
 }
